P1 M6: retire the reservation backend and re-source both dashboards
Drops the weekly-reservation system end-to-end on the backend (brief req. 18)
and re-points everything that read from it.

Migration V20260801_001 drops `reservations` and `payment_intents` and strips
the reservations clause out of prevent_active_campaign_delete(), leaving only
the bundle-subscription check. This is the half of decision D1 that M1 deferred:
the drop was unsafe until the entities mapping those tables went with it.

Deleted: the reservation/ module, PaymentIntent(+Repository), the legacy
one-time-payment endpoint and its Stripe checkout methods, the payment_intent.*
webhook handlers, syncPendingPayments, and the three CampaignHas*Reservation
exceptions (verified handler-only, never thrown). StripeWebhookService loses
eight now-unused dependencies and drops to a 3-arg constructor.

Kept as a mode check rather than an unconditional call: checkout.session.completed
now log-and-no-ops on mode=payment. The Stripe account still holds pre-cutover
events, and a replay must not reach the subscription handler and retry-storm.

Dashboards keep their metric definitions and swap sources (req. 20). Advertiser
spend and impressions come from bundle_subscriptions — same "booking basis" as
before — with the impressions window defined explicitly as
max(createdAt, periodStart) → min(now, currentPeriodEnd), treating a NULL renewal
date as still-running, which is reachable state on an ACTIVE row. Media-owner
earnings come from the bundle_payouts ledger, and the (100 - platformFeePercent)
recompute is gone: `amount` is what was actually transferred, so a later change
to the fee percentage can no longer rewrite history.

Two admin-tile changes worth noting. sumPlatformRevenue now measures MRR, a
run-rate, where it used to be cumulative lifetime booked value — a different
quantity, flagged rather than silently swapped (D43). countDistinctKnownUsers
loses its reservations arm without replacement: advertiser_b